<resources>
    <string name="app_name">Shovel Snow</string>
    <string name="start_button">Start</string>
    <string name="options_button">Options</string>
    <string name="shop_button">Shop</string>
    <string name="exit_button">Exit</string>
    <string name="shovels_title">Shovels</string>
    <string name="backgrounds_title">Backgrounds</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="background_spinner">Background</string>
    <string name="shovel_spinner">Shovel</string>
    <string name="completed">Snow Depleted</string>
</resources>
