<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/exitOptionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/volumeUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume_up" />

        <Button
            android:id="@+id/volumeDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume_down" />
    </LinearLayout>
</LinearLayout>